[package]
name = "media-uploader"
version = "0.3.0"
authors = ["Philipp Hentschel <philipp@f1ndus.de>"]
edition = "2024"
license = "MIT"
description = "Uploads all kind of media and strips metadata"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/f1ndus/media-uploader"
readme = "README.md"

[dependencies]
futures = "0.3"
actix-multipart = "0.7"
actix-web = { version = "4", default-features = false, features = ["macros", "compress-gzip", "compress-zstd"] }
actix-web-httpauth = "0.8"
config = "0.14"
rexiv2 = "0.9"
infer = "0.16"
anyhow = "1"
thiserror = "2"
